# wgpu-experiments

./: .gitignore  Cargo.toml  README.md  out.txt  renderer.drawio  written.csv
benches/: sort.rs
pdb/: 2aq5.pqr
pdb/covid/: readme.txt
pdb/covid_ron/: A.ron  C.ron  CRYSTALL_CUT_SINGLE.ron  CRYSTALL_CUT_SINGLE2.ron  CTD.ron  E.ron  FLUID_CUT_SINGLE.ron  FLUID_CUT_SINGLE2.ron  G.ron  M.ron  NTD.ron  P.ron  S.ron  U.ron
src/: application.rs  camera.rs  kmeans.rs  lib.rs  main.rs  pdb_loader.rs  rpdb.rs  utils.rs
src/pipelines/: mod.rs
src/pipelines/boxes/: box.frag  box_clipped.frag  box_clipped.vert  box_depth.frag  box_depth.vert  filled.vert  line.vert  mod.rs
src/pipelines/depth_conversion/: convert.comp  mod.rs
src/pipelines/mesh/: mesh.frag  mesh.vert  mod.rs
src/pipelines/sphere_billboards/: billboards.frag  billboards.vert  billboards_depth.frag  billboards_depth.vert  billboards_instanced depth.frag  billboards_instanced depth.vert  billboards_instanced.frag  billboards_instanced.vert  billboards_passthrough.frag  billboards_passthrough.vert  billboards_preprocess.comp  mod.rs
src/pipelines/triangle/: mod.rs
src/pipelines/triangles/: mod.rs  triangle.vert  triangles.frag  triangles.vert
