[package]
name = "wgpu-experiments"
version = "0.1.0"
authors = ["Matus Talcik <matus.talcik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.4"
winit = "0.21.0"
glsl-to-spirv = "0.1"
rand = "0.7"
zerocopy = "0.2"
rayon = "1.3"
nalgebra-glm = "0.5.0"
obj-rs = "0.5.0"
bytemuck = { version = "1.2", features = ["extern_crate_alloc"] }
safe-transmute = { git = "https://github.com/nabijaczleweli/safe-transmute-rs" }
lib3dmol = "0.3.2"

iced = { git ="https://github.com/hecrj/iced" }
iced_wgpu = { git = "https://github.com/hecrj/iced" }
iced_winit = { git = "https://github.com/hecrj/iced" }
iced_native = { git = "https://github.com/hecrj/iced" }
iced_style = { git = "https://github.com/hecrj/iced" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sort"
harness = false