[package]
name = "wgpu-experiments"
version = "0.1.0"
authors = ["Matus Talcik <matus.talcik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5"
winit = "0.22"
glsl-to-spirv = "0.1"
rand = "0.7"
rayon = "1.3"
nalgebra-glm = { version = "0.7.0", features = ["serde-serialize"] }
obj-rs = "0.6.0"
bytemuck = { version = "1.2", features = ["extern_crate_alloc"] }
lib3dmol = "0.3.2"
crossbeam-utils = "0.7"
image = "0.23"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.5.1"

iced = { git ="https://github.com/hecrj/iced" }
iced_wgpu = { git = "https://github.com/hecrj/iced" }
iced_winit = { git = "https://github.com/hecrj/iced" }
iced_native = { git = "https://github.com/hecrj/iced" }
iced_style = { git = "https://github.com/hecrj/iced" }

lyon = { version = "0.15", features = ["svg", "extra"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sort"
harness = false